update-manager (1:0.126.1) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeView.py:
    - log exceptions from pm.DoInstall() into main.log.
      this helps identifiying Dpkg::Pre-Invoke problems
  * DistUpgrade/DistUpgradeCache.py:
    - fix sandbox upgrade mode
  * DistUpgrade/DistUpgrade.cfg:
    - hint mysql-server upgrade (LP: #413789)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Oct 2009 13:14:47 +0200

update-manager (1:0.126) karmic; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - add gnome-app-install to the ForcedObsoletes
  * DistUpgrade/DistUpgrade.cfg.hardy:
    - add ability to upgrade from hardy to karmic (as asked for
      by Jonathan Riddell)
  * DistUpgrade/DistUpgradeQuirks.py:
    - add quirk handler to mark the dependencies of
      language-support-translations-* as manual on upgrade
  
      The language-support-translations- packages are removed in 
      karmic and would otherwise be marked as auto-removable.
      (LP: #439296)
    - convert PASS value from 1 to 0 for ntfs entries in
      /etc/fstab (LP: #441242) and add tests for it
    - put 386 to generic transition code here and decouple from
      the kernel selection
    - inhibit gnome-screensaver once the upgrade started 
      to avoid X crash (LP: #439594)
  * DistUpgrade/DistUpgradeCache.py:
    - workaround issues with kdesu when it drop the permission bits
      in a tmpdir (thanks to Jonathan Riddell)
    - fix base-installer kernel selection (LP: #441629)
    - fix log dir does not exist, create it (LP: #441959)
  * UpdateManager/backend/InstallBackendAptdaemon.py:
    - give up lock before running aptdaemon (LP: #445920)
  * po/ 
    - updated from launchpad (required as during a release upgrade
      we can't use langpacks)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 08 Oct 2009 17:45:25 +0200

update-manager (1:0.125.6) karmic; urgency=low

  * AutoUpgradeTester/UpgradeTestBackendSSH.py:
    - use ssh batch mode