@@ -6,9 +6,11 @@ update-manager (1:0.126.1) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - fix sandbox upgrade mode
   * DistUpgrade/DistUpgrade.cfg:
-    - hint mysql-server upgrade (LP: #413789)
+    - hint for mysql-server upgrade (LP: #413789)
+  * UpdateManager/backend/__init__.py:
+    - change order of backends to: synaptic, aptdaemon
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Oct 2009 13:14:47 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Oct 2009 18:30:55 +0200
 
 update-manager (1:0.126) karmic; urgency=low
 
